# shiny-eureka

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: refresh-deoendency-graph.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  categories.py  dashboard.py  products.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: category.py  mixins.py  product.py  user.py
backend/app/schemas/: category.py  dashboard.py  product.py  user.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  categories.ts  dashboard.ts  products.ts
frontend/src/views/: CategoryView.vue  DashboardView.vue  LoginView.vue  ProductView.vue
