[project]
name = "inventory-backend"
version = "0.1.0"
description = "FastAPI backend for inventory management"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.13.3",
  "email-validator==2.2.0",
  "fastapi==0.70.0",
  "passlib[bcrypt]==1.7.4",
  "python-jose[cryptography]==3.3.0",
  "sqlalchemy==2.0.35"
]

[project.optional-dependencies]
dev = ["ruff==0.6.8"]


[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["sandbox*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
